Added collection block

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
   </head>
   <body>
     <header>
-      <h1 class="black-average">Starbar Craft</h1>
+      <h1 class="black-average uppercase block">Starbar Craft</h1>
     </header>
 
     <div class="main-description">
-      <div class="main-description__text">
-        <span class="medium">
+      <div class="main-description__text text-spacing">
+        <span class="medium block">
           Градус жары повышается с каждым днем и все больше времени хочется
           проводить загородом со стаканчиком чего-то прохладненького...
         </span>
-        <span class="medium"> Что же полезного и прохладного выпить летом? </span>
+        <span class="medium block">
+          Что же полезного и прохладного выпить летом?
+        </span>
       </div>
       <img
         class="main-description__img"
@@ -27,57 +29,101 @@
     </div>
 
     <div class="starbar-description">
-        <img class="starbar-description__img" src="./img/pouring.png" alt="Напиток наливается в стакан">
-        <div class="starbar-description__text">
-            <h2>
-                Starbar Craft
-            </h2>
-            <span>- это созданная по авторским рецептам коллекция лимонадов с аутентичными вкусами</span>
-          </div>
+      <img
+        class="starbar-description__img"
+        src="./img/pouring.png"
+        alt="Напиток наливается в стакан"
+      />
+      <div class="starbar-description__text text-spacing">
+        <h2 class="uppercase">Starbar Craft</h2>
+        <span class="block"
+          >- это созданная по авторским рецептам коллекция лимонадов с
+          аутентичными вкусами</span
+        >
+      </div>
     </div>
 
     <div class="aromas">
-        <div class="aromas__green">
-            <div class="aromas__grass">
-                <div class="aromas__grass__text">
-                    <h5 class="black-big">
-                        травяной
-                    </h5>
-                    <span class="medium">
-                        (шалфей, можжевеловые ягоды, кардамон)
-                    </span>
-                </div>
-                <img  class="aromas__grass__img" src="./img/grass.png" alt="Травяной вкус">
-            </div>
-            <div class="aromas__berry">
-                <div class="aromas__berry__text">
-                    <h5 class="black-big">
-                        ягодный и пряный
-                    </h5>
-                    <span class="medium">
-                        (малина, имбирь и корица)
-                    </span>
-                </div>
-                <img  class="aromas__berry__img" src="./img/berry.png" alt="Ягодный вкус">
-            </div>
-        </div>
-
-        <div class="aromas-pink">
-          <div class="aromas__description">
-            <h3 class="black-big">Тщательно подобранные ботанические ноты в напитках создают тонкий баланс:</h3>
+      <div class="aromas__green">
+        <div class="aromas__grass">
+          <div class="aromas__grass__text text-spacing">
+            <h5 class="black-big block">травяной</h5>
+            <span class="medium block"> (шалфей, можжевеловые ягоды, кардамон) </span>
           </div>
-          <div class="aromas__flower">
-            <div class="aromas__flower__text">
-                <h5 class="black-big">
-                    цветочный и сладкий
-                </h5>
-                <span class="medium">
-                    (японская груша и белая хризантема)
-                </span>
-            </div>
-            <img  class="aromas__flower__img" src="./img/flower.png" alt="Травяной вкус">
+          <img
+            class="aromas__grass__img"
+            src="./img/grass.png"
+            alt="Травяной вкус"
+          />
         </div>
+        <div class="aromas__berry">
+          <div class="aromas__berry__text text-spacing">
+            <h5 class="black-big block">ягодный и пряный</h5>
+            <span class="medium block"> (малина, имбирь и корица) </span>
+          </div>
+          <img
+            class="aromas__berry__img"
+            src="./img/berry.png"
+            alt="Ягодный вкус"
+          />
         </div>
+      </div>
+
+      <div class="aromas-pink">
+        <div class="aromas__description">
+          <h3 class="black-big">
+            Тщательно подобранные ботанические ноты в напитках создают тонкий
+            баланс:
+          </h3>
+        </div>
+        <div class="aromas__flower">
+          <div class="aromas__flower__text text-spacing">
+            <h5 class="black-big block">цветочный и сладкий</h5>
+            <span class="medium block"> (японская груша и белая хризантема) </span>
+          </div>
+          <img
+            class="aromas__flower__img"
+            src="./img/flower.png"
+            alt="Травяной вкус"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="collection">
+      <div class="collection__title">
+        <h3 class="black-big uppercase">Коллекция вкусов:</h3>
+      </div>
+
+      <div class="collection__elder">
+        <div class="collection__elder__text text-spacing">
+          <h5 class="black-big  uppercase">Цветы бузины</h5>
+          <span class="medium block">
+            Легкая кислинка и освежающий вкус идеально для уталения летней жажды
+          </span>
+        </div>
+        <img class="collection__elder__img" src="./img/elder.png" alt="Вкус Цветы бузины">
+      </div>
+
+      <div class="collection__sage">
+        <div class="collection__sage__text text-spacing">
+          <h5 class="black-big  uppercase">Шалфей Можжевеловые ягоды Кардамон</h5>
+          <span class="medium">
+            Сочетание ягод и кардамона создают насыщенный пряный аромат
+          </span>
+        </div>
+        <img class="collection__sage__img" src="./img/sage.png" alt="Вкус Цветы бузины">
+      </div>
+
+      <div class="collection__raspberries">
+        <div class="collection__raspberries__text text-spacing">
+          <h5 class="black-big  uppercase">Малина имбирь и корица</h5>
+          <span class="medium block">
+            Сладкая малина и легкая горчинка имбиря объединяются в идеальный летний десерт
+          </span>
+        </div>
+        <img class="collection__raspberries__img" src="./img/raspberries.png" alt="Вкус Цветы бузины">
+      </div>
     </div>
   </body>
 </html>
