--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         <div class="aromas__grass">
           <div class="aromas__grass__text text-spacing">
             <h5 class="black-big block">травяной</h5>
-            <span class="medium block"> (шалфей, можжевеловые ягоды, кардамон) </span>
+            <span class="medium block">
+              (шалфей, можжевеловые ягоды, кардамон)
+            </span>
           </div>
           <img
             class="aromas__grass__img"
@@ -79,7 +81,9 @@
         <div class="aromas__flower">
           <div class="aromas__flower__text text-spacing">
             <h5 class="black-big block">цветочный и сладкий</h5>
-            <span class="medium block"> (японская груша и белая хризантема) </span>
+            <span class="medium block">
+              (японская груша и белая хризантема)
+            </span>
           </div>
           <img
             class="aromas__flower__img"
@@ -90,40 +94,122 @@
       </div>
     </div>
 
-    <div class="collection">
+    <div class="collection" id="tastes">
       <div class="collection__title">
         <h3 class="black-big uppercase">Коллекция вкусов:</h3>
       </div>
 
       <div class="collection__elder">
         <div class="collection__elder__text text-spacing">
-          <h5 class="black-big  uppercase">Цветы бузины</h5>
+          <h5 class="black-big uppercase">Цветы бузины</h5>
           <span class="medium block">
             Легкая кислинка и освежающий вкус идеально для уталения летней жажды
           </span>
         </div>
-        <img class="collection__elder__img" src="./img/elder.png" alt="Вкус Цветы бузины">
+        <img
+          class="collection__elder__img"
+          src="./img/elder.png"
+          alt="Вкус Цветы бузины"
+        />
       </div>
 
       <div class="collection__sage">
         <div class="collection__sage__text text-spacing">
-          <h5 class="black-big  uppercase">Шалфей Можжевеловые ягоды Кардамон</h5>
+          <h5 class="black-big uppercase">
+            Шалфей Можжевеловые ягоды Кардамон
+          </h5>
           <span class="medium">
             Сочетание ягод и кардамона создают насыщенный пряный аромат
           </span>
         </div>
-        <img class="collection__sage__img" src="./img/sage.png" alt="Вкус Цветы бузины">
+        <img
+          class="collection__sage__img"
+          src="./img/sage.png"
+          alt="Вкус Цветы бузины"
+        />
       </div>
 
       <div class="collection__raspberries">
         <div class="collection__raspberries__text text-spacing">
-          <h5 class="black-big  uppercase">Малина имбирь и корица</h5>
+          <h5 class="black-big uppercase">Малина имбирь и корица</h5>
           <span class="medium block">
-            Сладкая малина и легкая горчинка имбиря объединяются в идеальный летний десерт
+            Сладкая малина и легкая горчинка имбиря объединяются в идеальный
+            летний десерт
           </span>
         </div>
-        <img class="collection__raspberries__img" src="./img/raspberries.png" alt="Вкус Цветы бузины">
+        <img
+          class="collection__raspberries__img"
+          src="./img/raspberries.png"
+          alt="Вкус Цветы бузины"
+        />
       </div>
     </div>
+
+    <div class="all-tastes">
+      <div class="all-tastes__text">
+        <span class="medium block">
+          Лимонад - классический летний напиток, который известен своим
+          освежающим вкусом и охлаждающим эффектом.
+        </span>
+        <img
+          class="all-tastes__img"
+          src="./img/allTastes.png"
+          alt="Все вкусы"
+        />
+      </div>
+    </div>
+
+    <div class="new-items" id="new-items">
+      <div class="new-items__title-and-name">
+        <span class="black-average block">черника лимон лаванда</span>
+        <h4 class="black-big block uppercase">Попробуйте новинки!</h4>
+      </div>
+
+      <div class="new-items__blueberry-and-name">
+        <div class="new-items__blueberry">
+          <img
+            class="new-items__blueberry__img"
+            src="./img/blueberry.png"
+            alt="Вкус черника лимон лаванда"
+          />
+        </div>
+        <span class="black-average block">грейпфрут малина мята</span>
+      </div>
+
+      <div class="new-items__grapefruit-and-name">
+        <div>
+          <span class="black-average block new-items__grapefruit__name">японская груша</span>
+          <span class="black-average block new-items__grapefruit__name">белая хризантема</span>
+        </div>
+        <div class="new-items__grapefruit">
+          <img
+            class="new-items__grapefruit__img"
+            src="./img/grapefruit.png"
+            alt="Вкус грейпфрут малина мята"
+          />
+        </div>
+      </div>
+
+      <div class="new-items__pear">
+        <img class="new-items__pear__img" src="./img/pear.png" alt=" Вкус японская груша белая хризантема">
+      </div>
+    </div>
+
+    <footer>
+      <h2 class="footer__logo block uppercase">
+        Starbar Craft
+      </h2>
+      <div class="footer__nav-and-contacts">
+        <div class="footer__nav">
+          <a href="#tastes" class="uppercase">Вкусы</a>
+          <a href="#new-items" class="uppercase">Новинки</a>
+        </div>
+        <div class="footer__contacts">
+          <img src="./img/tg.png" alt="Telegram">
+          <img src="./img/twitter.png" alt="Twitter">
+          <img src="./img/facebook.png" alt="Facebook">
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
