--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="aromas__flower__text text-spacing">
             <h5 class="black-big block">цветочный и сладкий</h5>
             <span class="medium block">
-              (японская груша и белая хризантема)
+              (японская груша <br/> и белая хризантема)
             </span>
           </div>
           <img
