--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="main-description__text text-spacing">
         <span class="medium block">
           Градус жары повышается с каждым днем и все больше времени хочется
-          проводить загородом со стаканчиком чего-то прохладненького...
+          проводить загородом со стаканчиком <br/>чего-то прохладненького...
         </span>
         <span class="medium block">
           Что же полезного и прохладного выпить летом?
