--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <body>
     <header>
       <h1 class="black-average uppercase block">Starbar Craft</h1>
+      <div class="header__nav">
+        <a href="#tastes" class="uppercase">Вкусы</a>
+        <a href="#new-items" class="uppercase">Новинки</a>
+        <a href="#contacts" class="uppercase">Контакты</a>
+      </div>
     </header>
 
     <div class="main-description">
@@ -18,12 +23,12 @@
           проводить загородом со стаканчиком <br/>чего-то прохладненького...
         </span>
         <span class="medium block">
-          Что же полезного и прохладного выпить летом?
+          Что же полезного<br/> и прохладного выпить летом?
         </span>
       </div>
       <img
         class="main-description__img"
-        src="./img/stillifeWithFlower.png"
+        src="./img/stillifeWithFlower2.png"
         alt="Натюрморт с цветами"
       />
     </div>
@@ -31,7 +36,7 @@
     <div class="starbar-description">
       <img
         class="starbar-description__img"
-        src="./img/pouring.png"
+        src="./img/pouring2.png"
         alt="Напиток наливается в стакан"
       />
       <div class="starbar-description__text text-spacing">
@@ -65,7 +70,7 @@
           </div>
           <img
             class="aromas__berry__img"
-            src="./img/berry.png"
+            src="./img/berry2.png"
             alt="Ягодный вкус"
           />
         </div>
@@ -153,7 +158,7 @@
         </span>
         <img
           class="all-tastes__img"
-          src="./img/allTastes.png"
+          src="./img/allTastes2.png"
           alt="Все вкусы"
         />
       </div>
@@ -195,10 +200,25 @@
       </div>
     </div>
 
+    <div class="contacts" id="contacts">
+      <h4 class="black-average">Наши<br/> контакты</h4>
+      <div class="contacts__text">
+          <h5>Производство:</h5>
+          <span class="medium">141595, Московская обл., город <br/>Солнечногорск, д.Ложки; <br/>Тел: +7 (499) 189-37-37, <span class="border-bottom">fabrika@senegskaya.ru</span></span>
+          <h5>Продажи:</h5>
+          <span class="medium">123329, г.Москва, Кольская д.2, корп.4; <br/>Тел: +7 (499) 189-37-37, +7 (495) 786-22-33, <span class="border-bottom">office@senegskaya.ru</span></span>
+      </div>
+    </div>
+
     <footer>
-      <h2 class="footer__logo block uppercase">
-        Starbar Craft
-      </h2>
+      <div class="footer__logo-and-copyright">
+        <h2 class="footer__logo block uppercase">
+          Starbar Craft
+        </h2>
+        <span class="footer__copyright">
+          2017 © Bobimex - добыча и разлив природной минеральной воды
+        </span>
+      </div>
       <div class="footer__nav-and-contacts">
         <div class="footer__nav">
           <a href="#tastes" class="uppercase">Вкусы</a>
