--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="main-description">
       <div class="main-description__text text-spacing" data-aos="zoom-in-right">
         <span class="medium block">
-          Градус жары повышается с каждым днем и все больше времени хочется
+          Градус жары повышается с каждым днем<br /> и все больше времени хочется
           проводить загородом со стаканчиком <br />чего-то прохладненького...
         </span>
         <span class="medium block">
