--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
       />
       <div
         class="starbar-description__text text-spacing"
-        data-aos="zoom-in-left"
+        data-aos="zoom-out-left"
+        data-aos-offset="400"
       >
         <h2 class="uppercase">Starbar Craft</h2>
         <span class="block"
@@ -59,6 +60,7 @@
           <div
             class="aromas__grass__text text-spacing"
             data-aos="zoom-out-right"
+            data-aos-offset="400"
           >
             <h5 class="black-big block">травяной</h5>
             <span class="medium block">
@@ -75,6 +77,7 @@
           <div
             class="aromas__berry__text text-spacing"
             data-aos="zoom-out-left"
+            data-aos-offset="400"
           >
             <h5 class="black-big block">ягодный и пряный</h5>
             <span class="medium block"> (малина, имбирь и корица) </span>
@@ -98,6 +101,7 @@
           <div
             class="aromas__flower__text text-spacing"
             data-aos="zoom-out-right"
+            data-aos-offset="400"
           >
             <h5 class="black-big block">цветочный и сладкий</h5>
             <span class="medium block">
@@ -123,6 +127,7 @@
         <div
           class="collection__elder__text text-spacing"
           data-aos="zoom-out-left"
+          data-aos-offset="400"
         >
           <h5 class="black-big uppercase">Цветы бузины</h5>
           <span class="medium block">
@@ -140,6 +145,7 @@
         <div
           class="collection__sage__text text-spacing"
           data-aos="zoom-out-right"
+          data-aos-offset="400"
         >
           <h5 class="black-big uppercase">
             Шалфей Можжевеловые ягоды Кардамон
@@ -159,6 +165,7 @@
         <div
           class="collection__raspberries__text text-spacing"
           data-aos="zoom-out-left"
+          data-aos-offset="400"
         >
           <h5 class="black-big uppercase">Малина имбирь и корица</h5>
           <span class="medium block">
@@ -175,7 +182,7 @@
     </div>
 
     <div class="all-tastes">
-      <div class="all-tastes__text" data-aos="zoom-out-right">
+      <div class="all-tastes__text" data-aos="zoom-out-right" data-aos-offset="400">
         <span class="medium block">
           Лимонад - классический летний напиток, который известен своим
           освежающим вкусом и охлаждающим эффектом.
@@ -191,7 +198,7 @@
       </div>
 
       <div class="new-items__blueberry-and-name">
-        <div class="new-items__blueberry" data-aos="zoom-out-left">
+        <div class="new-items__blueberry" data-aos="zoom-out-left" data-aos-offset="300">
           <img
             class="new-items__blueberry__img"
             src="./img/blueberry.png"
@@ -210,7 +217,7 @@
             >белая хризантема</span
           >
         </div>
-        <div class="new-items__grapefruit" data-aos="zoom-out-right">
+        <div class="new-items__grapefruit" data-aos="zoom-out-right" data-aos-offset="300">
           <img
             class="new-items__grapefruit__img"
             src="./img/grapefruit.png"
@@ -219,7 +226,7 @@
         </div>
       </div>
 
-      <div class="new-items__pear" data-aos="zoom-out-left">
+      <div class="new-items__pear" data-aos="zoom-out-left" data-aos-offset="300">
         <img
           class="new-items__pear__img"
           src="./img/pear.png"
@@ -233,7 +240,7 @@
         Наши<br />
         контакты
       </h4>
-      <div class="contacts__text" data-aos="zoom-out-right">
+      <div class="contacts__text" data-aos="zoom-out-right" data-aos-offset="400">
         <h5>Производство:</h5>
         <span class="medium"
           >141595, Московская обл., город <br />Солнечногорск, д.Ложки;
